# flowrs

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  clippy.toml  dist-workspace.toml  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dependency-check.yml  integration.yml  release-plz.yml  release.yml
crates/flowrs-airflow/: CHANGELOG.md  Cargo.toml
crates/flowrs-airflow-model/: Cargo.toml
crates/flowrs-airflow-model/src/: graph.rs  lib.rs
crates/flowrs-airflow-model/src/model/: newtype_id.rs
crates/flowrs-airflow-model/src/model/common/: dag.rs  dagrun.rs  gantt.rs  log.rs  task.rs
crates/flowrs-airflow-model/src/traits/: dag.rs  dagrun.rs  dagstats.rs  log.rs  mod.rs  task.rs  taskinstance.rs
crates/flowrs-airflow/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  managed_services.rs
crates/flowrs-airflow/src/client/: base.rs
crates/flowrs-airflow/src/client/auth/: basic.rs  command.rs  mod.rs  static_token.rs
crates/flowrs-airflow/src/client/v1/: dag.rs  dagrun.rs  dagstats.rs  log.rs  mod.rs  task.rs  taskinstance.rs
crates/flowrs-airflow/src/client/v1/model/: dag.rs  mod.rs  taskinstance.rs
crates/flowrs-airflow/src/client/v2/: dag.rs  dagrun.rs  dagstats.rs  log.rs  mod.rs  task.rs  taskinstance.rs
crates/flowrs-airflow/src/client/v2/model/: dag.rs  dagrun.rs  log.rs  taskinstance.rs
crates/flowrs-airflow/src/managed_services/: astronomer.rs  conveyor.rs  expand.rs  mwaa.rs
crates/flowrs-airflow/src/managed_services/composer/: auth.rs  client.rs  mod.rs  provider.rs  regions.rs
crates/flowrs-config/: CHANGELOG.md  Cargo.toml
crates/flowrs-config/src/: auth.rs  lib.rs  paths.rs  server.rs  theme.rs
docs/: client-architecture.md
docs/plans/: 2024-12-14-tabs-navigation-design.md  2025-12-13-xdg-config-design.md  2025-12-13-xdg-config-implementation.md  2025-12-14-binary-size-reduction-design.md  2025-12-14-visual-refresh-design.md  2025-12-14-visual-selection-design.md  2025-12-14-visual-selection-implementation.md  2025-12-18-ci-testing-design.md  2025-12-18-ci-testing-implementation.md  2025-12-18-focus-tracking-design.md  2025-12-20-topological-task-sorting-design.md  2025-12-20-topological-task-sorting.md  2025-12-21-filter-state-machine-design.md  2025-12-21-filter-state-machine-implementation.md  2025-12-31-gcp-composer-design.md  2025-12-31-gcp-composer-implementation.md  2025-12-31-gcp-composer-terraform-design.md  2026-03-13-workspace-split.md
image/rotation/ascii/: 1.ascii  10.ascii  11.ascii  12.ascii  13.ascii  14.ascii  15.ascii  16.ascii  2.ascii  3.ascii  4.ascii  5.ascii  6.ascii  7.ascii  8.ascii  9.ascii
infrastructure/: README.md
infrastructure/astronomer/: README.md
infrastructure/aws/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/azure/: README.md
infrastructure/gcp/: .terraform.lock.hcl  README.md  composer.tf  iam.tf  network.tf  outputs.tf  provider.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
integration_infra/gcc/: provider.tf
integration_infra/mwaa/: .terraform.lock.hcl  iam.tf  import_dags.sh  main.tf  network.tf  output.tf  provider.tf  variables.tf
src/: airflow.rs  app.rs  ascii_flowrs.rs  lib.rs  main.rs  model.rs  ui.rs
src/airflow/: client.rs  graph.rs  managed_services.rs  mod.rs  model.rs
src/airflow/client/: auth.rs  base.rs  convert_v1.rs  convert_v2.rs  dagruns.rs  dags.rs  dagstats.rs  logs.rs  mod.rs  open_url.rs  taskinstances.rs
src/airflow/client/auth/: command.rs  mod.rs  static_token.rs
src/airflow/client/impls/: dag_ops.rs  dagrun_ops.rs  dagstats_ops.rs  log_ops.rs  mod.rs  task_ops.rs  taskinstance_ops.rs
src/airflow/client/v1/: dag.rs  dagrun.rs  dagstats.rs  log.rs  mod.rs  task.rs  taskinstance.rs
src/airflow/client/v2/: dag.rs  dagrun.rs  dagstats.rs  log.rs  mod.rs  task.rs  taskinstance.rs
src/airflow/config/: managed_auth.rs  mod.rs  paths.rs
src/airflow/managed_services/: astronomer.rs  conveyor.rs  expand.rs  mwaa.rs
src/airflow/managed_services/composer/: auth.rs  client.rs  mod.rs  provider.rs
src/airflow/model/: dag.rs  log.rs  mod.rs  newtype_id.rs  taskinstance.rs
src/airflow/model/common/: dag.rs  dagrun.rs  dagstats.rs  duration.rs  gantt.rs  log.rs  mod.rs  open_item.rs  task.rs  taskinstance.rs
src/airflow/model/v1/: dagrun.rs  log.rs  taskinstance.rs
src/airflow/model/v2/: dag.rs  dagrun.rs  dagstats.rs  taskinstance.rs
src/airflow/traits/: dag.rs  dagrun.rs  dagstats.rs  log.rs  mod.rs  task.rs  taskinstance.rs
src/app/: auth.rs  client.rs  config.rs  conveyor_auth.rs  dagruns.rs  dags.rs  environment_state.rs  error.rs  events.rs  filter.rs  model.rs  state.rs  taskinstance.rs  worker.rs
src/app/events/: custom.rs  generator.rs
src/app/managed_services/: conveyor.rs
src/app/model/: config.rs  dagruns.rs  dags.rs  filter.rs  filterable_table.rs  logs.rs  mod.rs  taskinstances.rs
src/app/model/config/: commands.rs  mod.rs
src/app/model/dagruns/: commands.rs  mod.rs  render.rs
src/app/model/dags/: commands.rs  mod.rs  render.rs
src/app/model/filter/: autocomplete.rs  condition.rs  filterable.rs  impls.rs  matching.rs  mod.rs  state.rs  state_machine.rs  widget.rs
src/app/popup/: model.rs
src/app/state/: breadcrumb.rs  context.rs  environment_state.rs  mod.rs  navigation.rs  sync.rs
src/app/worker/: browser.rs  config.rs  dagruns.rs  dags.rs  logs.rs  mod.rs  taskinstances.rs  tasks.rs
src/commands/: config.rs  run.rs
src/commands/config/: add.rs  list.rs  managed_services.rs  model.rs  remove.rs  update.rs
src/model/: dag.rs  dagrun.rs  taskinstance.rs
src/ui/: common.rs  config.rs  constants.rs  dag.rs  dagrun.rs  error.rs  gantt.rs  help.rs  init_screen.rs  popup.rs  tabs.rs  taskinstance.rs  theme.rs
src/ui/logo/: logo.ascii
src/ui/theme/: mod.rs
src/view/: ui.rs
tests/: managed_services_test.rs  v1_api_test.rs  v2_api_test.rs
tests/common/: mod.rs
vhs/: add_config.tape  flowrs.tape
(+59 files in other folders)
