[package]
name = "flowrs-tui"
version = "0.8.1"
edition = "2021"
rust-version = "1.87.0"
description = "Flowrs is a Terminal User Interface (TUI) for Apache Airflow"
license = "MIT"
repository = "https://github.com/jvanbuel/flowrs"
homepage = "https://github.com/jvanbuel/flowrs"
authors = ["jan@lightcone.be"]

[[bin]]
name = "flowrs"
path = "src/main.rs"


[package.metadata.dist]
formula = "flowrs"

[dependencies]
ansi-to-tui = { version = "8.0.1" }
anyhow = "1.0.100"
aws-config = { version = "1.8.11" }
aws-sdk-mwaa = "1.98.0"
chrono = "0.4.42"
async-trait = "0.1.89"
clap = { version = "^4.5", features = ["derive", "env"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.31"
inquire = "0.9.2"
log = { version = "0.4.29", features = ["std"] }
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
strum = { version = "0.27.2", features = ["derive"] }
syntect = "5.3.0"
time = { version = "0.3.45", features = [
  "serde",
  "serde-human-readable",
  "parsing",
  "macros",
] }
throbber-widgets-tui = "0.10.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "macros"] }
toml = "0.9.11"
unicode-width = "0.2.0"
url = "2.5.7"
webbrowser = "1.0.6"

[dev-dependencies]
mockito = "1.7.1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
pedantic = "warn"


[profile.dist]
inherits = "release"
