[workspace]
members = [
    ".",
    "crates/flowrs-config",
    "crates/flowrs-airflow-model",
    "crates/flowrs-airflow",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
chrono = "0.4.43"
clap = { version = "^4.5", features = ["derive", "env"] }
dirs = "6.0.0"
log = { version = "0.4.29", features = ["std"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
strum = { version = "0.28.0", features = ["derive"] }
time = { version = "0.3.47", features = ["serde", "serde-human-readable", "parsing", "macros"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "macros"] }
toml = "1.0.6"

[package]
name = "flowrs-tui"
version = "0.10.1"
edition = "2021"
rust-version = "1.87.0"
description = "Flowrs is a Terminal User Interface (TUI) for Apache Airflow"
license = "MIT"
repository = "https://github.com/jvanbuel/flowrs"
homepage = "https://github.com/jvanbuel/flowrs"
authors = ["jan@lightcone.be"]

[[bin]]
name = "flowrs"
path = "src/main.rs"


[package.metadata.dist]
formula = "flowrs"

[dependencies]
ansi-to-tui = { version = "8.0.1" }
anyhow = { workspace = true }
async-trait = { workspace = true }
flowrs-config = { path = "crates/flowrs-config" }
flowrs-airflow-model = { path = "crates/flowrs-airflow-model" }
flowrs-airflow = { path = "crates/flowrs-airflow" }
chrono = { workspace = true }
clap = { workspace = true }
crossterm = "0.29.0"
dirs = { workspace = true }
futures = "0.3.32"
inquire = "0.9.3"
log = { workspace = true }
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
syntect = "5.3.0"
time = { workspace = true }
throbber-widgets-tui = "0.11.0"
tokio = { workspace = true }
unicode-width = "0.2.0"
url = "2.5.7"
webbrowser = "1.2.0"

[dev-dependencies]
reqwest = { workspace = true }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
pedantic = "warn"


[profile.dist]
inherits = "release"
