[package]
name = "flowrs-airflow-model"
version = "0.10.1"
edition = "2021"
rust-version = "1.87.0"
description = "Domain models and traits for the Airflow API"
license = "MIT"
repository = "https://github.com/jvanbuel/flowrs"

[dependencies]
flowrs-config = { path = "../flowrs-config" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true

[lints.clippy]
pedantic = "warn"
