[package]
name = "flowrs-airflow"
version = "0.10.3"
edition = "2021"
rust-version = "1.87.0"
description = "Airflow API client library"
license = "MIT"
repository = "https://github.com/jvanbuel/flowrs"

[features]
default = ["conveyor", "mwaa", "astronomer", "composer"]
conveyor = ["dep:dirs"]
mwaa = ["dep:aws-config", "dep:aws-sdk-mwaa"]
astronomer = []
composer = ["dep:google-cloud-auth", "dep:futures"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
strum = { workspace = true }
aws-config = { version = "1.8.11", optional = true }
aws-sdk-mwaa = { version = "1.99.0", optional = true }
dirs = { workspace = true, optional = true }
futures = { version = "0.3.32", optional = true }
google-cloud-auth = { version = "1.8.0", default-features = false, features = ["default-rustls-provider"], optional = true }
log = { workspace = true }
regex = "1.12.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = "2.5.7"
