[package]
name = "flowrs-config"
version = "0.11.0"
edition = "2021"
rust-version = "1.87.0"
description = "Configuration types for flowrs"
license = "MIT"
repository = "https://github.com/jvanbuel/flowrs"

[dependencies]
flowrs-airflow = { path = "../flowrs-airflow", version = "0.10.1", default-features = false }
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
log.workspace = true
serde.workspace = true
strum.workspace = true
toml.workspace = true

[lints.clippy]
pedantic = "warn"
